added all tokens added more powers

--- a/src/main/resources/assets/power_tokens/lang/en_us.json
+++ b/src/main/resources/assets/power_tokens/lang/en_us.json
@@ -2,16 +2,26 @@
   "itemGroup.power_tokens.main": "Power Tokens",
 
   "item.power_tokens.power_token": "Power Token",
+  "item.power_tokens.unstable_token": "Unstable Token",
+  "item.power_tokens.reinforced_token": "Reinforced Token",
+  "item.power_tokens.inverted_token": "Inverted Token",
+
   "item.power_tokens.power_token.fail": "§4You failed to use the power token.",
   "item.power_tokens.power.token.pass": "You gained the %s ability.",
-  "item.power_tokens.power_token_core": "Power Token Core",
-  "item.power_tokens.power_token_shard": "Power Token Shard",
-  "item.power_tokens.unstable_token": "Unstable Token",
 
   "powers.power_tokens.more_health": "More Health",
   "powers.power_tokens.more_speed": "Speed Boost",
   "powers.power_tokens.tiny": "Tiny",
   "powers.power_tokens.natural_armor": "Natural Armor",
+  "powers.power_tokens.burn_resistance": "Burn Resistance",
+  "powers.power_tokens.miner_training": "Miner Training",
+  "powers.power_tokens.swift_hands": "Swift Hands",
+  "powers.power_tokens.less_knockback": "Less Knockback",
+  "powers.power_tokens.less_health": "Less Health",
+  "powers.power_tokens.flammable": "Flammable",
+  "powers.power_tokens.weakened_defense": "Weakened Defenses",
+  "powers.power_tokens.more_knockback": "More Knockback",
+  "powers.power_tokens.heavy_hands": "Heavy Hands",
 
   "advancements.power_tokens.root.title": "Tapping into Potential",
   "advancements.power_tokens.root.description": "Unlock your first power!",
