--- a/src/main/resources/assets/power_tokens/lang/en_us.json
+++ b/src/main/resources/assets/power_tokens/lang/en_us.json
@@ -17,11 +17,18 @@
   "powers.power_tokens.miner_training": "Miner Training",
   "powers.power_tokens.swift_hands": "Swift Hands",
   "powers.power_tokens.less_knockback": "Less Knockback",
+  "powers.power_tokens.lung_capacity": "Lung Capacity",
   "powers.power_tokens.less_health": "Less Health",
   "powers.power_tokens.flammable": "Flammable",
   "powers.power_tokens.weakened_defense": "Weakened Defenses",
   "powers.power_tokens.more_knockback": "More Knockback",
   "powers.power_tokens.heavy_hands": "Heavy Hands",
+  "powers.power_tokens.less_damage": "Less Damage",
+  "powers.power_tokens.big": "Big",
+  "powers.power_tokens.less_speed": "Less Speed",
+  "powers.power_tokens.metal_bones": "Metal Bones",
+  "powers.power_tokens.aquaphobic": "Aquaphobic",
+  "powers.power_tokens.vampire": "Vampire",
 
   "powers.power_tokens.more_health.description": "Gain 5 more hearts.",
   "powers.power_tokens.more_speed.description": "Gain a 60% speed boost.",
@@ -31,18 +38,26 @@
   "powers.power_tokens.miner_training.description": "Mines 100% faster.",
   "powers.power_tokens.swift_hands.description": "Gain a 70% attack speed boost.",
   "powers.power_tokens.less_knockback.description": "Deal 50% less knockback when attacking.",
+  "powers.power_tokens.lung_capacity.description": "You have 2x more air under water.",
   "powers.power_tokens.less_health.description": "Loose 2.5 hearts.",
   "powers.power_tokens.flammable.description": "Burn for double the time.",
   "powers.power_tokens.weakened_defense.description": "Passively loose 2.5 armor points.",
   "powers.power_tokens.more_knockback.description": "Deal 50% more knockback when attacking.",
   "powers.power_tokens.heavy_hands.description": "Attack speed becomes 50% slower.",
+  "powers.power_tokens.less_damage.description": "Less Damage",
+  "powers.power_tokens.big.description": "Become 30% bigger.",
+  "powers.power_tokens.less_speed.description": "Become 30% slower",
+  "powers.power_tokens.metal_bones.description": "Take fall 1 block earlier.",
+  "powers.power_tokens.aquaphobic.description": "Take damage when touching water.",
+  "powers.power_tokens.vampire.description": "Burn when in broad daylight.",
+
 
   "advancements.power_tokens.root.title": "Tapping into Potential",
   "advancements.power_tokens.root.description": "Unlock your first power!",
   "advancements.power_tokens.speed.title": "B-Train",
   "advancements.power_tokens.speed.description": "Unlock speed.",
-  "advancements.power_tokens.craftedtoken.title": "Fine I'll do it myself",
-  "advancements.power_tokens.craftedtoken.description": "Craft the Power Token.",
+  "advancements.power_tokens.wiped.title": "Back to Square One",
+  "advancements.power_tokens.wiped.description": "Wipe all your powers.",
 
   "commands.powers.list.none": "You have no powers currently.",
   "commands.powers.list.title": "Your Powers: ",
