--- a/src/main/resources/assets/power_tokens/lang/en_us.json
+++ b/src/main/resources/assets/power_tokens/lang/en_us.json
@@ -58,6 +58,10 @@
   "advancements.power_tokens.speed.description": "Unlock speed.",
   "advancements.power_tokens.wiped.title": "Back to Square One",
   "advancements.power_tokens.wiped.description": "Wipe all your powers.",
+  "advancements.power_tokens.all_powers.title": "Perfectly Balanced?",
+  "advancements.power_tokens.all_powers.description": "Obtain every single power.",
+  "advancements.power_tokens.vampire.title": "Shut-In",
+  "advancements.power_tokens.vampire.description": "Get the vampire advancement.",
 
   "commands.powers.list.none": "You have no powers currently.",
   "commands.powers.list.title": "Your Powers: ",
