Added mutual powers.

--- a/src/main/resources/assets/power_tokens/lang/en_us.json
+++ b/src/main/resources/assets/power_tokens/lang/en_us.json
@@ -77,7 +77,7 @@
   "advancements.power_tokens.wiped.title": "Back to Square One",
   "advancements.power_tokens.wiped.description": "Wipe all your powers.",
   "advancements.power_tokens.all_powers.title": "Perfectly Balanced?",
-  "advancements.power_tokens.all_powers.description": "Obtain every single power.",
+  "advancements.power_tokens.all_powers.description": "Obtain every single power at least once.",
   "advancements.power_tokens.vampire.title": "Shut-In",
   "advancements.power_tokens.vampire.description": "Get the vampire advancement.",
 
